# approvezilla

./: .env.example  .gitignore  README.md  harness.example.yml  pyproject.toml
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
harness/: __init__.py  approval.py  cli.py  config.py  interaction.py  jira_client.py  pipeline.py  runtime.py  state.py  web.py
harness/agents/: __init__.py  base.py  claude.py  coderabbit.py  codex.py  registry.py
harness/stages/: __init__.py  base.py  close.py  design.py  docs.py  implement.py  plan.py  registry.py  review.py  tasks.py  test.py
harness/static/: dashboard.css  dashboard.js
harness/templates/: dashboard.html
tests/: test_runtime.py  test_web.py
